# PandaShifu

./: README.md  pyproject.toml  requirements.txt  setup.cfg
pandashifu/: about.py  ingredients.py  jade.py  master.py  plan.py  scroll.py  styles.py
