[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandashifu"
version = "0.0.2"
authors = [
  { name="Peng Xiong", email="xiongpengnus@gmail.com" },
]
description = "PandaShifu is a user interface for descriptive and predictive analytics."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/XiongPengNUS/PandaShifu"
Issues = "https://github.com/XiongPengNUS/PandaShifu/issues"